Closed
Bug 1123511
Opened 10 years ago
Closed 10 years ago
crash in mozilla::a11y::DocAccessibleParent::AddChildDoc(mozilla::a11y::DocAccessibleParent*, unsigned __int64)
Categories
(Core :: General, defect)
Tracking
()
RESOLVED
FIXED
mozilla39
Tracking | Status | |
---|---|---|
firefox37 | --- | unaffected |
firefox38 | - | affected |
firefox39 | --- | fixed |
People
(Reporter: away, Assigned: tbsaunde)
Details
(Keywords: crash)
Crash Data
This bug was filed from the Socorro interface and is
report bp-d80c5c18-b523-4b21-b0bd-7fae72150119.
=============================================================
Trevor requested a new bug for these remaining crashes. This signature is still around after bug 1088148 but in lesser volume.
It's up to the #2 spot in recent nightlies. Did something change?
Flags: needinfo?(tbsaunde+mozbugs)
Assignee | ||
Comment 2•10 years ago
|
||
(In reply to David Major [:dmajor] (UTC+13) from comment #1)
> It's up to the #2 spot in recent nightlies. Did something change?
(In reply to David Major [:dmajor] (UTC+13) from comment #1)
> It's up to the #2 spot in recent nightlies. Did something change?
not that I'm aware of. I've been trying to look into the related 1128751, but I haven't had much luck understanding the issue yet.
Flags: needinfo?(tbsaunde+mozbugs)
Is there anything that can be backed out, disabled, etc. in the meantime while you investigate? Letting this continue to crash doesn't sound very good.
Flags: needinfo?(tbsaunde+mozbugs)
Assignee | ||
Comment 4•10 years ago
|
||
smaug I'm disabling ipc till I can finish debugging stuff next week if you don't figure stuff out sooner.
Flags: needinfo?(tbsaunde+mozbugs)
Assignee | ||
Comment 5•10 years ago
|
||
Comment 6•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox39:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
(In reply to Trevor Saunders (:tbsaunde) from comment #4)
> smaug I'm disabling ipc till I can finish debugging stuff next week if you
> don't figure stuff out sooner.
Did anything result from that debugging? Wondering if the disable should be uplifted; this is still pretty high on 38.
Flags: needinfo?(tbsaunde+mozbugs)
Assignee | ||
Comment 8•10 years ago
|
||
(In reply to David Major [:dmajor] (UTC+13) from comment #7)
> (In reply to Trevor Saunders (:tbsaunde) from comment #4)
> > smaug I'm disabling ipc till I can finish debugging stuff next week if you
> > don't figure stuff out sooner.
>
> Did anything result from that debugging? Wondering if the disable should be
> uplifted; this is still pretty high on 38.
err, yeah, I've been meaning to do that.
Flags: needinfo?(tbsaunde+mozbugs)
[Tracking Requested - why for this release]: topcrash on 38 only
Assignee | ||
Comment 10•10 years ago
|
||
I filed 1144347 for disabling on aurora
Comment 12•10 years ago
|
||
Note: fix was via patch on bug 1128751
This signature has no reports with a build date more recent than 20150323004010. \o/
You need to log in
before you can comment on or make changes to this bug.
Description
•